Modified some files to test out Sonarlint